James webb discription and information added

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <body>
   <header>
     <h1>Thought Organizer</h1>
+    <h3>Jamesweb is 35</h3>
     <nav>
       <a href="create.html" target="_blank">Create New Thought / Group</a> |
       <a href="groups.html" target="_blank">Groups</a> |
